k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kkium-app
  namespace: kkium
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kkium-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: kkium-app
    spec:
      containers:
      - name: kkium-app
        image: asia-northeast3-docker.pkg.dev/kkium-prod/kkium-repo/kkium-app:a36ac432b584a0886e24950724c1ad436be37d5f
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 30
